--- a/style.css
+++ b/style.css
@@ -78,3 +78,10 @@ body {
     margin-right: auto;
     font-size: 35px;
 }
+
+.js-weather {
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    font-size: 2em;
+}
